# mcp-schema-auditor

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mcp_governance/: __init__.py  cli.py  linter.py  loader.py  models.py  scorer.py  security.py
tests/: fixtures.py  test_linter.py  test_loader.py  test_scorer.py  test_security.py
